Changes: - predicted_surface and gravel_scale loopholes fixes - Custom Trailmap map matcher - Lots of bug fixes in /convert_track all phases with test gpxs